# Code/spring-server/src/main/java/io/heig/tasks/entities/StepEntity.java
@@ -1,9 +1,10 @@
 package io.heig.tasks.entities;
 
+import io.heig.tasks.api.model.NewStep;
 import org.springframework.data.mongodb.core.mapping.Document;
 import org.springframework.data.annotation.Id;
 import io.heig.tasks.api.model.Step;
-import io.heig.tasks.api.model.StepAbstract.StatusEnum;
+import io.heig.tasks.api.model.NewStep.StatusEnum;
 
 import java.io.Serializable;
 
@@ -59,8 +60,8 @@ public class StepEntity implements Serializable {
         s.setName(getName());
         s.setContext(getContext());
         s.setCreationDate(getCreationDate());
-        s.setStatus(getStatus());
-        s.setStepId(getId());
+        s.setStatus(getStatus().toString());
+        s.setId(getId());
         return s;
     }
 }
