# Code/spring-server/src/main/resources/api-spec.yaml
@@ -197,10 +197,14 @@ definitions:
         type: string
       description:
         type: string
+      task_id:
+        type: string
     required: [name]
   Task:
     type: object
     properties:
+      id:
+        type: string
       task_id:
         type: string
       self:
@@ -221,16 +225,13 @@ definitions:
     properties:
       task_id:
         type: string
-      starting_date:
-        type: integer
-        format: int64
       name:
         type: string
     required: [task_id]
   Execution:
     type: object
     properties:
-      execution_id:
+      id:
         type: string
       self:
         type: string
@@ -241,14 +242,12 @@ definitions:
         format: int64
       steps:
         type: array
-
         items:
           $ref: '#/definitions/Step'
-  StepAbstract:
+  NewStep:
     type: object
-    discriminator: stepType
     properties:
-      stepType:
+      execution_id:
         type: string
       name:
         type: string
@@ -261,25 +260,18 @@ definitions:
           - Error
           - Log
           - Success
-    required:
-      - stepType
-  NewStep:
-    type: object
-    allOf:
-    - $ref: '#/definitions/StepAbstract'
-    - type: object
-      properties:
-        execution_id:
-          type: string
     required: [execution_id, name, status]
   Step:
     type: object
-    allOf:
-    - $ref: '#/definitions/StepAbstract'
-    - type: object
-      properties:
-        step_id:
-          type: string
-        creationDate:
-          type: integer
-          format: int64
+    properties:
+      id:
+        type: string
+      creationDate:
+        type: integer
+        format: int64
+      name:
+        type: string
+      context:
+        type: string
+      status:
+        type: string
